Replaced static assets by link to openweathermap.org

--- a/src/app/city-card/city-card.component.html
+++ b/src/app/city-card/city-card.component.html
@@ -6,7 +6,8 @@
     </div>
     <div class="filler"></div>
     <div>
-      <img src="assets/img/{{city.weather.weather.icon}}.png" alt="weather icon">
+<!--      <img src="assets/img/{{city.weather.weather.icon}}.png" alt="weather icon">-->
+      <img src="https://openweathermap.org/img/wn/{{city.weather.weather.icon}}@2x.png" alt="weather icon">
     </div>
     <div class="button-delete-container">
       <button (click)="delete()" class="button-delete">
