--- a/src/app/components/modal-container/modal-container.component.scss
+++ b/src/app/components/modal-container/modal-container.component.scss
@@ -3,10 +3,6 @@
   flex-direction: row;
 }
 
-.margin-left {
-  margin-left: 20px;
-}
-
 .modal {
   z-index: 1000;
   position: fixed;
@@ -24,12 +20,14 @@
     width: 100%;
     height: 100%;
   }
-  .dialog {
-    height: fit-content;
-    width: fit-content;
+  .modal-content {
     z-index: 2;
+    height: fit-content;
+    max-height: 90%;
+    max-width: 90%;
+    width: fit-content;
+    overflow: auto;
     margin: auto;
-    padding: 20px;
     border: 1px solid black;
     background: #ffffff;
     .button-menu {
